--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,5 @@
 version: "3.6"
 services:
-
   #PHP Service
   app:
     build:
@@ -15,10 +14,10 @@ services:
     working_dir: /var/www
     volumes:
       - ../hobbyproject:/var/www
-      - ./php/conf/local.ini:/usr/local/etc/php/conf.d/local.ini
+      - ./php/conf/php.ini:/usr/local/etc/php/conf.d/php.ini
     networks:
       - app-network
-    
+
   #Nginx Service
   webserver:
     image: nginx:alpine
